--- a/user.yml
+++ b/user.yml
@@ -1,7 +1,7 @@
 --- # Personal information
-first: FIRST_NAME
-last: LAST_NAME
-watiam: WATIAM_ID
-student: STUDENT_ID
-email: email
+first: CHAHAK
+last: RAVAL
+watiam: craval
+student: 20812531
+email: craval@uwaterloo.ca
 ...
